[package]
name = "async-h1"
version = "2.1.2"
license = "MIT OR Apache-2.0"
repository = "https://github.com/http-rs/async-h1"
documentation = "https://docs.rs/async-h1"
description = "Asynchronous HTTP 1.1 parser."
keywords = ["async", "http", "stream", "parser", "http1"]
categories = ["asynchronous", "parser-implementations", "web-programming", "web-programming::http-client", "web-programming::http-server"]
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]
readme = "README.md"
edition = "2018"

[dependencies]
async-io = "0.1"
futures-lite = "0.1"
httparse = "1"
http-types = {git="https://github.com/serzhiio/http-types", branch="agnostic"}
pin-project-lite = "0.1"
byte-pool = "0.2"
lazy_static = "1"